- INTERNAL: Avoid unnecessary refresh view operations
- INTERNAL: Share actions between play list and navigation tree and table
- INTERNAL: Refactoring of play list
- INTERNAL: Update search indexes only if user is going to perform a search
- INTERNAL: Don't update navigation table if it's not visible
- FIX: Deleting many files from device freezes aTunes gui for some seconds [2855962]

aTunes 1.13.4
-------------
- Lyricsfly engine update
- FIX: Images with alpha channel are displayed wrong
- FIX: Windows 7 ready application icon
- FIX: Too much memory needed when retrieving artist images from Last.fm with original size
- FIX: Gui may freeze if audio files are on a remote storage device and the connection speed is slow

aTunes 1.13.3
-------------
- FIX: LyricWiki XML API is offline
- FIX: Search: wrong song is added [2820043]
- FIX: Column selection popup menu opens at the wrong location [2819588]
- FIX: When removing songs from favorites, not all songs were removed
- FIX: Extract Image action opens dialog in wrong monitor

aTunes 1.13.2
-------------
- FIX: Last.fm issue with new image size
- FIX: Wrong export to device with album artist pattern [2811019]
- FIX: Invalid handling of disc number [2810837]
- FIX: Mute bug with MPlayer engine
- FIX: Wrong colours if album cover is retrieved automatically [2795024]
- Croatian translation added (thanks to Dominko Aždajić)
- Danish translation added (thanks to David Rasmussen)

aTunes 1.13.1
-------------
- FIX: aTunes does not start anymore if proxy is set [2788274]
- FIX: Tray icon bug
- FIX: Album Tooltip in Linux shows task bar button
- FIX: NPE when trying to set album tooltip image if tooltip is no longer visible
- FIX: No sort type defined by default
- FIX: CD Ripper fails if CD artist or composer are unknown [2791497]

aTunes 1.13.0
-------------
- Hotkeys are now configurable (feature request [1951766])
- Option to import folders to repository (feature request [1966408])